basic setup completed

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "you can make simple todo app using this api's.For learning api integration this is the best project. see more details in the readMe file.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev":"nodemon index.js"
   },
   "keywords": [
     "todo-app",
@@ -12,5 +13,17 @@
     "react-project"
   ],
   "author": "rohitBarate100",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
+  }
 }
